<resources>
    <string name="app_name">connectraida</string>
    <string name="started_title">hello pooler</string>
    <string name="started_subtitle">Nice to see you here, <br><b>Login</b> or
        <b>Sign Up</b> </br> to join our community</string>
    <string name="illustration_img">Onboarding logo</string>
    <string name="btn_register">Register</string>
    <string name="btn_reg_pooler">Pooler</string>
    <string name="btn_reg_rider">Driver</string>
    <string name="btn_login">Login</string>
    <string name="btn_next">Next</string>
    <string name="driver_particulars">Driver Particulars</string>
    <string name="pooler_particulars">Pooler Particulars</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Name</string>

    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm Password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_short_Pooler">Sign Up</string>
    <string name="action_sign_in_short_pooler_sub"><font color="#019A81"><b>Register</b> </font> as a pooler</string>
    <string name="action_sign_in_short_Driver_sub"><font color="#019A81"><b>Register</b> </font> as a Driver</string>
    <string name="forgot_pass"><font color="#019A81"><b>Forgot Password?</b></font></string>
    <string name="signin_sub"> <font color="#019A81"><b>Login</b> </font> if you are already signed up</string>
    <string name="register_login"> if you are not yet signed up <font color="#019A81"><b>Register</b> </font> </string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_driver_home_drawer">DriverHomeDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>