<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.DriverParticularsActivity">


    <ImageView
        android:id="@+id/imageView_infoHouse_tenant"
        android:layout_width="161dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_circle_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="86dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/tit_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:textSize="23sp"
        android:text="@string/driver_particulars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="250dp"
        android:hint="Good Conduct"
        android:inputType="textEmailAddress"
        style="@style/textInput"
        android:paddingLeft="@dimen/activity_horizontal_margin"

        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_infoHouse_tenant" />


    <EditText
        android:id="@+id/username_sign"
        style="@style/textInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:hint="ID Image"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingLeft="@dimen/activity_horizontal_margin"

        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirm_pass"
        style="@style/textInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/activity_horizontal_margin"

        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_sign" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Submit_pooler"
        style="@style/buttonDark"
        android:layout_width="235dp"
        android:layout_height="46dp"
        android:layout_marginTop="70dp"
        android:text="Submit"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_pass" />


</androidx.constraintlayout.widget.ConstraintLayout>